# DevRTOS

./: CMakeLists.txt  DesignDeatils.c  README.md  main.c
source/: CMakeLists.txt
source/inc/: DevRTOSConfig.h  queue.h  task.h
source/src/: CMakeLists.txt  queue.c  task.c
